--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "muicss": "^0.9.39",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-icons": "^2.2.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "webfontloader": "^1.6.28"
   },
