--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "muicss": "^0.9.39",
+    "namor": "^1.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-table": "^6.8.6",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
