--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.3.1",
     "muicss": "^0.9.39",
     "namor": "^1.0.1",
     "react": "^16.4.1",
