Added firebase user authentication

--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -16,7 +16,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "firebase": "^5.3.1",
+    "firebaseui": "^3.2.0",
     "http-errors": "~1.6.2",
+    "material-ui": "^0.20.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.3",
