--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.3.1",
+    "firebaseui": "^3.2.0",
+    "material-ui": "^0.20.2",
     "muicss": "^0.9.39",
     "namor": "^1.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-firebaseui": "^3.0.6",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
