--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -7,6 +7,7 @@
     "firebase": "^5.3.1",
     "firebaseui": "^3.2.0",
     "material-ui": "^0.20.2",
+    "moment": "^2.22.2",
     "muicss": "^0.9.39",
     "namor": "^1.0.1",
     "react": "^16.4.1",
