--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.18.0",
     "firebase": "^5.3.1",
     "firebaseui": "^3.2.0",
+    "immutability-helper": "^2.7.1",
     "material-ui": "^0.20.2",
     "moment": "^2.22.2",
     "muicss": "^0.9.39",
     "namor": "^1.0.1",
+    "re-base": "^4.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-firebaseui": "^3.0.6",
