--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.6.1",
     "nodemon": "^1.18.3",
+    "re-base": "^4.0.0",
     "react-router-dom": "^4.3.1",
     "sequelize": "^4.38.0",
     "uglify-js": "^3.4.5"
