--- a/react-backend/package.json
+++ b/react-backend/package.json
@@ -17,13 +17,16 @@
     "express": "~4.16.0",
     "firebase": "^5.3.1",
     "firebaseui": "^3.2.0",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.2",
     "material-ui": "^0.20.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.1",
+    "natural": "^0.6.1",
     "nodemon": "^1.18.3",
     "re-base": "^4.0.0",
     "react-router-dom": "^4.3.1",
+    "recipe-ingredient-parser": "^1.5.6",
     "sequelize": "^4.38.0",
     "uglify-js": "^3.4.5"
   }
